# gpu

assignments/: .gitignore  CMakeLists.txt  output.ipynb  try_ex2.sh
assignments/assignment2/: output.ipynb  try_ex1.sh  try_ex2.sh
assignments/assignment2/src/: hw2_ex1.cu  hw2_ex2.cu
assignments/assignment4/src/: hw4-ex3.cu
assignments/src/: hw2_ex1.cu  hw2_ex1_template(2).cu  hw2_ex2_template(2).cu
